# rabbitmq

./: Readme.md  pyproject.toml
src/: consumer.py  producer.py
src/test_files/: test_1.py  test_2.py  test_3.py
